@@ -1,3 +1,10 @@
+Thu May 30 15:14:43 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>
+
+        * cuts/iccm/arch/dds/servant/DDS_Stateful_Writer_T.cpp:
+
+          Implemented quick hack to fix sending events with Boolean attributes
+          per issue 316.
+
 Mon May 13 15:40:45 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>
 
         * cuts/iccm/arch/portico/deployment/Portico_Deployment_Handlers.mpc:
